# ppooll_externals

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
help/: ll_mcwaveform.maxhelp
ll_2dslider/: CMakeLists.txt  ll_2dslider.c
ll_fastforward/: CMakeLists.txt  ll_fastforward.c
ll_mcwaveform/: CMakeLists.txt  ll_mcwaveform.c
ll_mcwaveform/help/: ll_mcwaveform.maxhelp
ll_number/: CMakeLists.txt
source/ll_2dslider/: CMakeLists.txt
source/ll_fastforward/: CMakeLists.txt
source/ll_mcwaveform/: CMakeLists.txt  ll_mcwaveform.c
source/ll_number/: CMakeLists.txt
